--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI 助理</title>
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+  <link rel="icon" href="https://www.line.me/favicon.ico">
+  <title>Line Agent</title>
   <style>
     /* --- 全局與基本樣式 --- */
     :root {
@@ -37,15 +38,16 @@
       font-size: 18px;
       /* 基本字體大小 */
       line-height: 1.5;
+      -webkit-text-size-adjust: 100%;
     }
 
     /* --- 主要容器 --- */
     #chat-container {
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      height: 100%;
       /* 佔滿視窗高度 */
-      max-width: 700px;
+      max-width: 600px;
       /* 最大寬度，模擬手機寬度 */
       margin: 0 auto;
       /* 置中 */
