--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     /* --- 標題列 --- */
     #header {
+      position: relative;
       background-color: var(--line-green);
       color: var(--white);
       padding: 10px 15px;
@@ -236,6 +237,154 @@
       height: 20px;
     }
 
+    /* --- 設定 Modal --- */
+    #settings-button {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: white;
+      font-size: 1.5em;
+      cursor: pointer;
+    }
+
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .modal-wrapper {
+      position: relative;
+      background-color: var(--white);
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+      width: 90%;
+      max-width: 500px;
+      max-height: 90vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .modal-content {
+      padding: 25px;
+      overflow-y: auto;
+    }
+
+    .modal-content h2 {
+      margin-top: 0;
+      margin-bottom: 20px;
+      text-align: center;
+      color: var(--text-color);
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+      font-size: 0.9em;
+    }
+
+    .required::after {
+      content: " *";
+      color: var(--error-color);
+    }
+
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid var(--border-color);
+      border-radius: 5px;
+      font-size: 1em;
+    }
+
+    .form-group-inline {
+      display: flex;
+      gap: 15px;
+      justify-content: space-between;
+    }
+
+    .form-group-inline .form-group {
+      width: 100%;
+    }
+
+    .form-actions {
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    .form-actions button {
+      padding: 10px 20px;
+      border-radius: 5px;
+      border: none;
+      font-size: 1em;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    #save-settings {
+      background-color: var(--line-green);
+      color: var(--white);
+    }
+
+    #cancel-settings {
+      background-color: var(--light-gray);
+      color: var(--text-color);
+      border: 1px solid var(--border-color);
+    }
+
+    .error-message {
+      color: var(--error-color);
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    /* --- Loading Overlay for Modal --- */
+    .loading-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+      border-radius: 10px;
+    }
+
+    .loader {
+      border: 5px solid var(--light-gray);
+      border-top: 5px solid var(--line-green);
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
     /* --- 響應式調整 --- */
     @media (max-width: 480px) {
       body {
@@ -274,7 +423,10 @@
 
 <body>
   <div id="chat-container">
-    <div id="header">LINE Agent</div>
+    <div id="header">
+      <span>LINE Agent</span>
+      <button id="settings-button" aria-label="設定">⚙️</button>
+    </div>
 
     <div id="message-area">
     </div>
@@ -291,6 +443,63 @@
     </div>
   </div>
 
+  <div id="settings-modal" class="modal-overlay" style="display: none;">
+    <div class="modal-wrapper">
+      <div class="modal-content">
+        <h2>模型設定</h2>
+        <form id="settings-form">
+          <div class="form-group">
+            <label for="provider" class="required">Provider</label>
+            <select id="provider" name="provider">
+              <option value="vercel">Vercel</option>
+              <option value="google">Google</option>
+              <option value="openai">OpenAI</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="model" class="required">Model</label>
+            <input type="text" id="model" name="model" placeholder="e.g., openai/gpt-5">
+          </div>
+          <div class="form-group">
+            <label for="api_key">API Key</label>
+            <input type="password" id="api_key" name="api_key" placeholder="Enter your API key">
+          </div>
+          <div class="form-group">
+            <label for="base_url">Base URL (Optional)</label>
+            <input type="text" id="base_url" name="base_url" placeholder="e.g., https://api.example.com/v1">
+          </div>
+          <div class="form-group">
+            <label for="system_role">System Role</label>
+            <textarea id="system_role" name="system_role" rows="4"
+              placeholder="Define the assistant\'s behavior..."></textarea>
+          </div>
+          <div class="form-group-inline">
+            <div class="form-group">
+              <label for="max_tokens">Max Tokens</label>
+              <input type="number" id="max_tokens" name="max_tokens" placeholder="4096">
+            </div>
+            <div class="form-group">
+              <label for="temperature">Temperature</label>
+              <input type="number" id="temperature" name="temperature" step="0.1" min="0" max="2" placeholder="e.g., 0.7">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="timeout">Timeout (ms)</label>
+            <input type="number" id="timeout" name="timeout" placeholder="58000">
+          </div>
+          <div id="settings-error" class="error-message" style="display: none;"></div>
+          <div class="form-actions">
+            <button type="button" id="cancel-settings">取消</button>
+            <button type="submit" id="save-settings">儲存</button>
+          </div>
+        </form>
+      </div>
+      <div class="loading-overlay" style="display: none;">
+        <div class="loader"></div>
+      </div>
+    </div>
+  </div>
+
   <script>
     const messageArea = document.getElementById('message-area');
     const userInput = document.getElementById('user-input');
@@ -303,6 +512,123 @@
 
     // --- DOMContentLoaded 事件監聽器 ---
     document.addEventListener('DOMContentLoaded', () => {
+      // --- Settings Modal Elements ---
+      const settingsButton = document.getElementById('settings-button');
+      const settingsModal = document.getElementById('settings-modal');
+      const settingsForm = document.getElementById('settings-form');
+      const saveSettingsButton = document.getElementById('save-settings');
+      const cancelSettingsButton = document.getElementById('cancel-settings');
+      const settingsError = document.getElementById('settings-error');
+
+      // --- Event Listeners for Settings ---
+      settingsButton.addEventListener('click', openSettings);
+      cancelSettingsButton.addEventListener('click', closeSettings);
+      settingsForm.addEventListener('submit', saveSettings);
+
+
+      // --- Functions for Settings ---
+      async function openSettings() {
+        const loader = document.querySelector('#settings-modal .loading-overlay');
+        settingsError.style.display = 'none';
+        settingsModal.style.display = 'flex';
+        loader.style.display = 'flex';
+
+        try {
+          const response = await fetch('/api/settings');
+          if (!response.ok) {
+            throw new Error('無法載入設定。');
+          }
+          const settings = await response.json();
+          // Populate form
+          document.getElementById('provider').value = settings.provider || 'google';
+          document.getElementById('model').value = settings.model || '';
+          document.getElementById('api_key').value = settings.api_key || '';
+          document.getElementById('base_url').value = settings.base_url || '';
+          document.getElementById('system_role').value = settings.system_role || '';
+          document.getElementById('max_tokens').value = settings.max_tokens || '';
+          document.getElementById('temperature').value = settings.temperature || '';
+          document.getElementById('timeout').value = settings.timeout || '';
+        } catch (error) {
+          settingsError.textContent = error.message;
+          settingsError.style.display = 'block';
+        } finally {
+          loader.style.display = 'none';
+        }
+      }
+
+      function closeSettings() {
+        settingsModal.style.display = 'none';
+      }
+
+      async function saveSettings(event) {
+        event.preventDefault();
+
+        // 1. Get and process data
+        const settings = {};
+        const formData = new FormData(settingsForm);
+        formData.forEach((value, key) => {
+          if (value && value.trim() !== '') {
+            if (['max_tokens', 'temperature', 'timeout'].includes(key)) {
+              settings[key] = Number(value);
+            } else {
+              settings[key] = value;
+            }
+          }
+        });
+
+        // 2. Validation
+        const requiredFields = ['provider', 'model'];
+        const missingFields = requiredFields.filter(field => !settings[field]);
+        if (missingFields.length > 0) {
+          settingsError.textContent = `請填寫必填欄位：${missingFields.join(', ')}`;
+          settingsError.style.color = 'var(--error-color)';
+          settingsError.style.display = 'block';
+          return; // Stop here
+        }
+
+        // 3. Start loading UI
+        const loader = document.querySelector('#settings-modal .loading-overlay');
+        saveSettingsButton.disabled = true;
+        settingsError.style.display = 'none';
+        loader.style.display = 'flex';
+
+        try {
+          const response = await fetch('/api/settings', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(settings),
+          });
+
+          if (!response.ok) {
+            const errorText = await response.text();
+            throw new Error(errorText || '儲存失敗。');
+          }
+
+          await response.json();
+
+          // 4. Handle Success
+          loader.style.display = 'none'; // Hide loader immediately
+          settingsError.textContent = '設定已儲存！';
+          settingsError.style.color = 'var(--line-green)';
+          settingsError.style.display = 'block';
+
+          setTimeout(() => {
+            closeSettings();
+            // Reset for next time
+            saveSettingsButton.disabled = false;
+            settingsError.style.display = 'none';
+            settingsError.style.color = 'var(--error-color)';
+          }, 1500);
+
+        } catch (error) {
+          // 5. Handle Fetch Error
+          loader.style.display = 'none';
+          saveSettingsButton.disabled = false;
+          settingsError.textContent = `儲存失敗: ${error.message}`;
+          settingsError.style.color = 'var(--error-color)';
+          settingsError.style.display = 'block';
+        }
+      }
       // 初始歡迎訊息
       addMessageToHistory('assistant', '你好！請問有什麼可以協助您的嗎？');
       displayMessage('assistant', '你好！請問有什麼可以協助您的嗎？');
