fix: update timeout settings to use seconds and adjust default value

--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="timeout">Timeout (ms)</label>
-            <input type="number" id="timeout" name="timeout" placeholder="58000">
+            <label for="timeout">Timeout (seconds)</label>
+            <input type="number" id="timeout" name="timeout" placeholder="290">
           </div>
           <div id="settings-error" class="error-message" style="display: none;"></div>
           <div class="form-actions">
